# HeD-med-data-blender

./: README.md  blenderLauncher.py  dir_tree.py  generateClientsDataMRI.py  generateReport.py  pyproject.toml  run_fed_learning_sim.sh
medDataBlender/: __init__.py  launcher_args.py
medDataBlender/fedLearning/: __init__.py  eHealthClient.py  eHealthServer.py
medDataBlender/models/: __init__.py  acgan.py  baseModel.py  tts_gan.py
medDataBlender/models/dataLoaders/: __init__.py  baseLoader.py  imageLoader.py  timeSeriesLoader.py
medDataBlender/models/ecg/: __init__.py  adamw.py  tts_gan_components.py
medDataBlender/models/evaluator/: ImageEvaluator.py  SyntheticDataEvaluator.py  TimeSeriesEvaluator.py  __init__.py
medDataBlender/models/mri/: __init__.py  acgan_components.py  acgan_components_with_residuals.py
medDataBlender/validationReport/: __init__.py  metricsDB.py  reportBuilder.py  report_args.py
medDataBlender/validationReport/classificator_models/: __init__.py  image_classification.py  timeSeries_classification.py
medDataBlender/validationReport/distributedReport/: __init__.py  clientReport.py  serverReport.py
medDataBlender/validationReport/privacyMetrics/: __init__.py  k_anonimity.py  mia.py
